ENT-11607 - Kotlin/JDK compatibility (#99)
* Kotlin/JDK compatibility
* Updated kotlin version
* More add-opens
* ENT-11607: Update Corda platform version to 140.
* Removed --add-export; not needed

---------

Co-authored-by: Adel El-Beik <adel.el-beik@r3.com>